# web-ns

./: Cargo.toml  build.rs
doml-web/: Cargo.toml  build.rs
doml-web/src/: attr.rs  html5.rs  lib.rs  static_web_attr.rs
doml-web/src/attr/: attr_type.rs  value.rs
doml-web/src/schema/: html5.rs
src/: any_ns.rs  attr.rs  attr_type.rs  attr_value.rs  attribute.rs  attribute_fmt.rs  attribute_format.rs  element.rs  html.rs  html5.rs  internal.rs  lib.rs  macros.rs  name.rs  phf_util.rs  static_unicase.rs  static_web_attr.rs  static_web_tag.rs  svg.rs  symbols.rs  unicase_slice.rs  unicase_util.rs  web.rs
src/attr/: attr_impl.rs  attr_type.rs  data.rs  dataset.rs  value.rs
src/defs/: README.md  html5_defs.rs  html_defs.rs  ns_defs.rs  svg_defs.rs
src/new/: mod.rs
src/schema/: html.rs
