[package]
name = "web-ns"
version = "0.1.0"
authors = ["Audun Halland <audun.halland@gmail.com>"]
edition = "2018"

[dependencies]
downcast-rs = "1"
dyn-symbol = { git = "https://github.com/audunhalland/dyn-symbol.git", branch = "main" }
unicase = "2"
phf = { version = "0.8", features = ["unicase"] }
phf_shared = { version = "0.8", features = ["unicase"] }

[build-dependencies]
unicase = "2"
phf_codegen = { version = "0.8" }
phf_shared = { version = "0.8", features = ["unicase"] }
