[package]
name = "doml-web"
version = "0.1.0"
authors = ["Audun Halland <audun.halland@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doml = { path = "../" }
unicase = "2"
phf = { version = "0.8", features = ["unicase"] }
phf_shared = { version = "0.8", features = ["unicase"] }

[build-dependencies]
unicase = "2"
phf_codegen = { version = "0.8" }
phf_shared = { version = "0.8", features = ["unicase"] }
